[package]
name = "rctree"
# When updating version, also modify html_root_url in the lib.rs and in the README
version = "0.2.1"
authors = [
    "Simon Sapin <simon.sapin@exyr.org>",
    "Reizner Evgeniy <razrfalcon@gmail.com>"
]
license = "MIT"
description = "A 'DOM-like' tree implemented using reference counting"
repository = "https://github.com/RazrFalcon/rctree"
documentation = "https://docs.rs/rctree/"
readme = "README.md"

[dev-dependencies]
pretty_assertions = "0.5.1"
indoc = "0.2"
