[package]
name = "rctree"
# When updating version, also modify html_root_url in the lib.rs
version = "0.3.3"
authors = [
    "Simon Sapin <simon.sapin@exyr.org>",
    "Evgeniy Reizner <razrfalcon@gmail.com>"
]
edition = "2018"
license = "MIT"
description = "A 'DOM-like' tree implemented using reference counting"
repository = "https://github.com/RazrFalcon/rctree"
documentation = "https://docs.rs/rctree/"
readme = "README.md"
